# thread-keeper

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  glama.json  install.sh  pyproject.toml  requirements-semantic.txt  server.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: labeler.yml  pr-title.yml  publish.yml  release-tag.yml  release.yml  test.yml
apps/macos-agent-status/: README.md  ThreadKeeperAgentStatus.swift  install.sh
docs/: ARCHITECTURE.md  LANDSCAPE_COMPARISON.md  RELEASING.md  ROADMAP.md  VALIDATION_GAP_ANALYSIS.md  sync-deployment.md  sync.md
docs/superpowers/plans/: 2026-06-08-dialectic-user-model-autofeed.md  2026-06-09-config-single-env-pydantic-settings.md  2026-07-07-daemon-host-thin-servers.md  2026-07-12-fts-storage-dedup.md  2026-07-15-db-concurrency-retrieval-quality.md
docs/superpowers/specs/: 2026-05-26-onnx-embeddings-design.md  2026-06-07-dialectic-user-model-autofeed-design.md  2026-06-09-config-single-env-pydantic-settings-design.md  2026-07-07-daemon-host-thin-servers-design.md  2026-07-10-fts-storage-dedup-design.md
scripts/: backfill_skill_tiers.py  db_stress.py  tk-watch-vscode.sh  tk_verify_ingest.py
scripts/hooks/: inbox-check.sh  tk-brief.sh  tk-session-end.sh  tk-status.sh  tk-task-gate.sh  tk-thread-nudge.sh
scripts/memory_eval/: ground_truth.json  run.py
tests/: conftest.py  test_adapters.py  test_agent_status.py  test_auto_update.py  test_backup.py  test_brief_footprint.py  test_brief_sections.py  test_candidate_reviewer.py  test_concepts.py  test_config_settings.py  test_config_watcher.py  test_core_memory.py  test_curator.py  test_daemon_host_config.py  test_daemon_host_integration.py  test_daemon_state.py  test_dashboard.py  test_db_compact.py  test_db_contention.py  test_db_migration_fts.py  test_db_runtime.py  test_db_schema.py  test_delegated_search.py  test_dialectic.py  test_dialectic_feed_tools.py  test_dialectic_miner.py  test_dialectic_observation_resolve.py  test_dialectic_recompute.py  test_dialectic_tier.py  test_dialectic_validator.py  test_dialog_fts_external.py  test_egress_policy.py  test_embed_routing.py  test_embedding_generation.py  test_embedding_storage_dedup.py  test_error_paths.py  test_eval_harness.py  test_evolve_applier.py  test_evolve_apply_2.py  test_evolve_apply_3.py  (+73 more)
threadkeeper/: __init__.py  _mcp.py  _setup.py  _spawn_wrap.py  agent_metadata.py  agent_status.py  auto_update.py  backup.py  brief.py  candidate_reviewer.py  config.py  config_watcher.py  curator.py  curator_snapshots.py  daemon_state.py  db.py  dialectic_miner.py  dialectic_validator.py  egress.py  elicitation.py  embeddings.py  evolve_applier.py  evolve_daemon.py  extract_daemon.py  forget.py  github_budget.py  github_safety.py  harvest.py  helpers.py  host.py  host_embed.py  i18n.py  identity.py  ingest.py  lessons.py  memory_guard.py  menubar_app.py  migrate_embeddings.py  model_catalog.py  notify.py  (+20 more)
threadkeeper/adapters/: __init__.py  _hook_helpers.py  antigravity.py  base.py  claude_code.py  claude_desktop.py  codex.py  copilot.py  gemini.py  vscode.py
threadkeeper/assets/macos-agent-status/: Info.plist  README.md  ThreadKeeperAgentStatus.swift  build.sh  install.sh
threadkeeper/eval/: __init__.py  __main__.py  harness.py
threadkeeper/eval/fixtures/: candidates.json  shadow.json  skill_quality.json
threadkeeper/sync/: __init__.py  capture.py  daemon.py  identity.py  migrate.py  protocol.py  reset_node.py  server.py
threadkeeper/tools/: __init__.py  agent_status.py  candidate_reviewer.py  concepts.py  config_watch.py  consolidate.py  core_memory.py  correlation.py  curator.py  dashboard.py  db_maintenance.py  dialectic.py  dialectic_feed.py  dialog.py  distill.py  evolve_applier.py  extract.py  forget.py  graph.py  invariants.py  lessons.py  memory_guard.py  missed_spawns.py  panel.py  peers.py  pickup.py  probes.py  process_health.py  prompts.py  resources.py  session.py  shadow_review.py  skills.py  spawn.py  style.py  sync.py  threads.py  validate.py
