[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "threadkeeper"
version = "0.9.2"
description = "Multi-agent shared brain across Claude Code/Desktop, Codex, Gemini, Copilot, VS Code. Cross-session memory, self-improving skill loops, inter-agent signaling — one local MCP server."
requires-python = ">=3.11"
authors = [{ name = "thread-keeper contributors" }]
license = { text = "MIT" }
readme = "README.md"
keywords = [
    "mcp", "model-context-protocol", "claude", "codex", "gemini",
    "copilot", "memory", "agents", "self-improving", "skills",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[project.optional-dependencies]
# Semantic cross-language search + sub-linear vector index. Recommended
# for any real use — without it, dialog_search falls back to FTS5 only.
# Default backend is fastembed/ONNX Runtime: no PyTorch, ~700MB footprint.
semantic = [
    "fastembed>=0.3",
    "numpy>=1.24.0",
    "sqlite-vec>=0.1.9",
]
# Legacy PyTorch backend, kept as an opt-in fallback. Install this AND set
# THREADKEEPER_EMBED_BACKEND=sentence-transformers to use it. ~1.8GB RSS.
semantic-st = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "sqlite-vec>=0.1.9",
]
# Test runner + coverage. pytest-forked isolates each test in its own
# process: the per-test package re-import (tests/conftest.py) accumulates
# native ONNX/tokenizer thread pools that can deadlock sqlite finalize in a
# single long-lived process, so CI runs `pytest --forked`.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-forked>=1.6",
]

[project.urls]
Homepage      = "https://github.com/po4erk91/thread-keeper"
Repository    = "https://github.com/po4erk91/thread-keeper"
Issues        = "https://github.com/po4erk91/thread-keeper/issues"
Documentation = "https://github.com/po4erk91/thread-keeper#readme"
Changelog     = "https://github.com/po4erk91/thread-keeper/releases"

[project.scripts]
# After `pip install threadkeeper`, the user gets `thread-keeper-setup`
# directly on PATH. Equivalent to `python -m threadkeeper._setup`.
thread-keeper-setup = "threadkeeper._setup:main"
# Recompute stored embeddings with the active backend (e.g. after switching to
# the ONNX default). Equivalent to `python -m threadkeeper.migrate_embeddings`.
tk-migrate-embeddings = "threadkeeper.migrate_embeddings:main"
# JSON/text status feed for menu-bar widgets and terminal monitors.
tk-agent-status = "threadkeeper.agent_status:main"

[tool.setuptools.packages.find]
include = ["threadkeeper*"]
exclude = ["tests*", "scripts*"]

[tool.setuptools.package-data]
threadkeeper = [
    "assets/macos-agent-status/Info.plist",
    "assets/macos-agent-status/README.md",
    "assets/macos-agent-status/ThreadKeeperAgentStatus.swift",
    "assets/macos-agent-status/build.sh",
    "assets/macos-agent-status/install.sh",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "slow: tests >1s (semantic embed warmup, file scan)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
