[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "threadkeeper"
version = "0.16.2"
description = "Multi-agent shared brain across Claude Code/Desktop, Codex, Antigravity CLI, Copilot, and VS Code. Cross-session memory, self-improving skill loops, inter-agent signaling — one local MCP server."
requires-python = ">=3.11"
authors = [{ name = "thread-keeper contributors" }]
license = { text = "MIT" }
readme = "README.md"
keywords = [
    "mcp", "model-context-protocol", "claude", "codex", "antigravity",
    "copilot", "memory", "agents", "self-improving", "skills",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # >=1.10.0 for the MCP 2025-06-18 tool vocabulary: ToolAnnotations
    # (readOnly/destructive/idempotent hints) + structured outputSchema (#67).
    "mcp>=1.10.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Semantic cross-language search + sub-linear vector index. Recommended
# for any real use — without it, dialog_search falls back to FTS5 only.
# Default backend is fastembed/ONNX Runtime: no PyTorch, ~700MB footprint.
semantic = [
    # 0.8 switched this model to mean pooling. Keep one compatible runtime
    # family so stored document vectors and fresh query vectors share a space;
    # embeddings.py fingerprints the generation for resumable migration.
    "fastembed>=0.8,<0.9",
    "numpy>=1.24.0",
    "sqlite-vec>=0.1.9",
]
# Legacy PyTorch backend, kept as an opt-in fallback. Install this AND set
# THREADKEEPER_EMBED_BACKEND=sentence-transformers to use it. ~1.8GB RSS.
semantic-st = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "sqlite-vec>=0.1.9",
]
# Test runner + coverage. pytest-forked isolates each test in its own
# process: the per-test package re-import (tests/conftest.py) accumulates
# native ONNX/tokenizer thread pools that can deadlock sqlite finalize in a
# single long-lived process, so CI runs `pytest --forked`. pytest-xdist is an
# opt-in LOCAL accelerator (`-n auto`); it is NOT used in CI because it does
# not compose with --forked (collides on the xdist worker tmp dir) and a few
# tests still race under it. See CONTRIBUTING → Running tests.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-forked>=1.6",
    "pytest-xdist>=3.5",
]

[project.urls]
Homepage      = "https://github.com/po4erk91/thread-keeper"
Repository    = "https://github.com/po4erk91/thread-keeper"
Issues        = "https://github.com/po4erk91/thread-keeper/issues"
Documentation = "https://github.com/po4erk91/thread-keeper#readme"
Changelog     = "https://github.com/po4erk91/thread-keeper/releases"

[project.scripts]
# After `pip install threadkeeper`, the user gets `thread-keeper-setup`
# directly on PATH. Equivalent to `python -m threadkeeper._setup`.
thread-keeper-setup = "threadkeeper._setup:main"
# Recompute stored embeddings with the active backend (e.g. after switching to
# the ONNX default). Equivalent to `python -m threadkeeper.migrate_embeddings`.
tk-migrate-embeddings = "threadkeeper.migrate_embeddings:main"
# Create/restore consistent single-file snapshots of the live WAL SQLite store.
tk-backup = "threadkeeper.backup:main"
# Dry-run/apply targeted erasure for one session/cid/thread/dialog UUID.
tk-forget = "threadkeeper.forget:main"
# One-time re-id migration that enables cross-machine sync (opt-in, destructive;
# back up db.sqlite first). Equivalent to `python -m threadkeeper.sync.migrate`.
tk-sync-migrate = "threadkeeper.sync.migrate:main"
# Assign a fresh sync identity to a CLONED DB before it accepts writes/sync, so
# two machines don't share one node_id. `python -m threadkeeper.sync.reset_node`.
tk-sync-reset-node = "threadkeeper.sync.reset_node:main"
# JSON/text status feed for menu-bar widgets and terminal monitors.
tk-agent-status = "threadkeeper.agent_status:main"

[tool.setuptools.packages.find]
include = ["threadkeeper*"]
exclude = ["tests*", "scripts*"]

[tool.setuptools.package-data]
threadkeeper = [
    "assets/macos-agent-status/Info.plist",
    "assets/macos-agent-status/README.md",
    "assets/macos-agent-status/ThreadKeeperAgentStatus.swift",
    "assets/macos-agent-status/build.sh",
    "assets/macos-agent-status/install.sh",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "slow: tests >1s (semantic embed warmup, file scan)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
